# VideoGameManagement

./: CMakeLists.txt  README.md
include/: color.hpp  hashtable.hpp  ll.hpp  platform.hpp  videogame.hpp
src/: hashtable.cpp  ll.cpp  main.cpp  videogame.cpp
